13-03-k8s-net/deploy_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: app
  labels:
    serv: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiko
  template:
    metadata:
      labels:
        app: taiko
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8080
            name: back-multitool
