13-03-k8s-net/deploy_cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
  namespace: app
  labels:
    serv: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiko
  template:
    metadata:
      labels:
        app: taiko
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8080
            name: cache-multitool
